# vuim

./: .easignore  .gitignore  App.tsx  README.md  app.json  eas.json  index.js  package-lock.json  package.json
.github/workflows/: release.yml
android/: build-output.txt  build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/collegebustrack/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/vuim/: InAppUpdateModule.kt  MainActivity.kt  MainApplication.kt  SplashActivity.kt  UpdateNotifierModule.kt  UpdateNotifierPackage.kt
android/app/src/main/res/layout/: activity_splash.xml
android/app/src/main/res/values/: strings.xml
assets/: gears-animation.json
ios/: Podfile
ios/collegebustrack/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/collegebustrack.xcodeproj/: project.pbxproj
ios/vuim/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/vuim.xcodeproj/: project.pbxproj
src/: theme.ts  types.ts
src/components/: AnimatedGradientBackground.tsx  AnimatedInput.tsx  AnimatedProgressBar.tsx  BottomNavBar.tsx  GlassCard.tsx  HamburgerButton.tsx  SideDrawerMenu.tsx  SubjectCard.tsx
src/config/: ai.runtime.ts  ai.ts  appMeta.ts
src/context/: NotificationsContext.tsx  SubjectsContext.tsx
src/data/: updateNotes.ts
src/navigation/: RootNavigator.tsx  types.ts
src/screens/: AICoachScreen.tsx  AboutDetailScreen.tsx  AboutScreen.tsx  HomeScreen.tsx  LiveTalkScreen.tsx  MyTasksScreen.tsx  SplashScreen.tsx  (+6 more)
(+12 files in other folders)
